--- a/PUSH_Main.css
+++ b/PUSH_Main.css
@@ -27,11 +27,7 @@ input[type="number"] {
   margin: 1px;
 }
 
-input[type='number']::-webkit-inner-spin-button, 
-input[type='number']::-webkit-outer-spin-button { 
-    -webkit-appearance: none;
-    margin: 0;
-}
+
 
 input[type='checkbox'] {
 	height: 13px;
@@ -57,26 +53,21 @@ select {
 /*Hitchart formatting start*/
 .sheet-wounds{
   display: inline-grid;
-	grid-template-columns: 120px 40px 35px 35px 190px;
-	grid-template-rows: 18px 18px 18px 18px 18px 18px 18px 18px 18px 18px 18px 18px 18px 18px 18px 18px 18px;
-	grid-gap: 2px;
+	grid-template-columns: 35% 15% 10% 15% 105px;
+	grid-template-rows: 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px;
+	grid-gap: 1px;
 }
 
 .sheet-wounds > input[type="number"]{
 	width: 35px;
-	height: 18px;
-}
-.sheet-wounds > input[type='text']{
-	width: 100%;
+	height: 100%;
 }
 
-.sheet-wounds > div {
-  padding: 1px;
-  text-align: left;
-  border: 1px solid black;
-  margin:0 -1px -1px 0;
-  
+.sheet-wounds > input[type='text']{
+	width: 200%;
 }
+
+
 
 /*Pacechart Formatting*/
 .sheet-pace {
@@ -96,13 +87,14 @@ select {
 /*Main Div Formatting*/
 .sheet-main{
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: row wrap;
+	max-width: 1500px;
 }
 
 /*Stat Pool formatting start*/
 .sheet-pool-section{
   display: grid;
-	  grid-template-columns: 50px 75px 45px 75px 75px 200px;
+	  grid-template-columns: 10% 15% 8.5% 15% 15% 38%;
 	  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;	  
 }
 
@@ -113,9 +105,22 @@ select {
 }
 
 /*Derived Attribues formatting start*/
+.sheet-col {
+	display: flex;
+	border: black 2px solid;
+}
+
 .sheet-derived-section{
   display: grid;
-	  grid-template-columns: 200px 1fr 1fr 1fr;
+	  grid-template-columns: 40% 15%;
+	  margin-right: 10px;
+}
+
+.sheet-derived-section > input[type="number"] {
+	display: inline-block;
+	border: black solid 1px;
+	margin: 2px;
+	width: 99%;
 }
 .sheet-derived-section > span {
 	width: 100%;
@@ -123,35 +128,119 @@ select {
 	padding-top: 10px;
 }
 
+.sheet-derived-section >  label {
+	display: inline-block;
+	width: 250px;
+	padding-top: 5px;
+	font-size: small;
+}
+
+
+.sheet-conditiontracker-section {
+	display: flex;
+	flex-flow: nowrap;
+	justify-content: space-between;
+}
+
+.sheet-conditiontracker-section >  label {
+	display: inline-block;
+	width: 250px;
+	padding-top: 5px;
+	font-size: small;
+}
+
+
+
+/*WeaponCatLabel*/
+.sheet-WeaponCatLabel > label {
+	display: inline-block;
+	width: 250px;
+	padding-top: 5px;
+}
+
 /*Ranged Weapon formatting*/
 .sheet-rangedweaponlabel{
 	display: grid;
-		grid-template-columns: 30px 150px 50px 50px 50px 75px 100px 50px 50px 50px 50px 150px;
-		grid-gap: 5px;
+		grid-template-columns: 5% 4% 15% 5% 5% 7.5% 5% 10% 5% 5% 5% 5% 21%;
+		grid-gap: 1px;
+}
+
+.sheet-rangedweaponlabel > span {
+	width: 100%;
+	height: 100%;
+	text-align: center;
 }
 
 .sheet-rangedweapon-section{
 	display: grid;
-		grid-template-columns: 30px 150px 50px 50px 50px 75px 100px 50px 50px 50px 50px 150px;
-		grid-gap: 5px;
+		grid-template-columns: 5% 4% 15% 5% 5% 7.5% 5% 10% 5% 5% 5% 5% 21%;
+		grid-template-rows: 28px;
+		grid-gap: 1px;
+		margin-bottom: 10px;
 }
 
-input.rangedweapon{
-	width: 100%;
-	margin: 1px;
-}	
+.sheet-rangedweapon-section > input[type="text"],
+.sheet-rangedweapon-section > select {
+	display: inline-block;
+	border: black solid 1px;
+	height: 28px;
+	margin: 0px;
+	width: 99%;
+}
+
+.sheet-rangedweapon-section > textarea {
+	display: inline-block;
+	margin: 0px;
+	border: black solid 1px;
+	width: 99%;
+	min-width: 30%;
+	max-width: 100%;
+	height: 19px;
+	min-height: 19px;
+	max-height: 50px; 
+}
+
 /*Melee Weapon Formatting*/
 .sheet-meleeweaponlabel{
 	display: grid;
-		grid-template-columns: 30px 45px 150px 40px 40px 40px 50px 100px 70px 50px 50px 200px;
-		grid-gap: 5px;
+		grid-template-columns: 5% 5% 15% 5% 5% 5% 10% 5% 5% 5% 5% 24%;
+		grid-gap: 2px;
 }	
+
+.sheet-meleeweaponlabel > span {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+}
 
 .sheet-meleeweapon-section{
 	display: grid;
-		grid-template-columns: 30px 45px 150px 40px 40px 40px 50px 100px 70px 50px 50px 200px;
-		grid-gap: 5px;
+		grid-template-columns: 5% 5% 15% 5% 5% 5% 10% 5% 5% 5% 5% 24%;
+		grid-gap: 2px;
 }
+
+.sheet-meleeweapon-section > input[type="text"],
+.sheet-meleeweapon-section > input[type="number"],
+.sheet-meleeweapon-section > select {
+	display: inline-block;
+	border: black solid 1px;
+	height: 28px;
+	margin: 0px;
+	width: 99%;
+}
+
+.sheet-meleeweapon-section > textarea {
+	display: inline-block;
+	margin: 0px;
+	border: black solid 1px;
+	width: 99%;
+	min-width: 30%;
+	max-width: 100%;
+	height: 19px;
+	min-height: 19px;
+	max-height: 50px; 
+}
+
 
 /*Skill Column Formatting*/
 .sheet-skills-columns{
@@ -180,8 +269,6 @@ input.rangedweapon{
 	width: 75%;
 }
 
-
-
 /*Skills formatting start*/
 .sheet-skills-section{
 	display: grid;
@@ -209,38 +296,93 @@ input[type="checkbox"]:checked.sheet-toggle ~ div.sheet-body div.sheet-skills-se
 }
 
 /*Gear Page formatting start*/
+div.sheet-gear_and_equipment{
+	margin: 5px;
+}
 .sheet-gearpagelabel{
 	display: grid;
-		grid-template-columns: 30px 150px 50px 50px 50px 75px 100px 50px 50px 50px 50px 150px;
-		grid-gap: 5px;
+		grid-template-columns: 5% 3% 13% 5% 5% 7.5% 5% 10% 5% 5% 5% 5% 23%;
+		grid-gap: 1px;
 }
-
+.sheet-gearpagelabel > span {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+}
 .sheet-gearpage-section{
 	display: grid;
-		grid-template-columns: 30px 150px 50px 50px 50px 75px 100px 50px 50px 50px 50px 150px;
-		grid-gap: 5px;
+		grid-template-columns:  5% 3% 13% 5% 5% 7.5% 5% 10% 5% 5% 5% 5% 23%;
+		grid-template-rows: 28px;
+		grid-gap: 1px;
+		margin-bottom: 10px;
 }
-
-input.gearpage{
-	width: 100%;
-	margin: 1px;
+.sheet-gearpage-section > input[type="text"],
+.sheet-gearpage-section > select {
+	display: inline-block;
+	border: black solid 1px;
+	height: 28px;
+	margin: 0px;
+	width: 99%;
+}
+.sheet-gearpage-section > textarea {
+	display: inline-block;
+	margin: 0px;
+	border: black solid 1px;
+	width: 99%;
+	min-width: 30%;
+	max-width: 100%;
+	height: 19px;
+	min-height: 19px;
+	max-height: 50px; 
 }
 
 /*Spells formatting start*/
 .sheet-spellpagelabel{
-		grid-template-columns: 150px 1fr 1fr 1fr 300px; 
+		grid-template-columns: 20% 6% 10% 1fr 50%; 
 		grid-template-rows: 24px;
+		grid-gap: 2px;
 }
 
 .sheet-spells-section{
 	display: grid;
-		grid-template-columns: 150px 1fr 1fr 1fr 300px; 
+		grid-template-columns: 150px 6% 10% 1fr 50%; 
 		grid-template-rows: 24px;
+		margin-bottom: 10px; 
+		grid-gap: 2px;
 }
 
 input.spellpage{
 	width: 100%;
 	margin: 1px;
+}
+.sheet-spellpages > div {
+	margin: 10px;
+}
+
+.sheet-spells-section > span {
+	text-align: center;
+	margin-bottom: 0px;
+}
+
+.sheet-spells-section > input[type="text"],
+.sheet-spells-section > select {
+	display: inline-block;
+	border: black solid 1px;
+	height: 28px;
+	margin: 0px;
+	width: 99%;
+}
+
+.sheet-spells-section > textarea {
+	display: inline-block;
+	margin: 0px;
+	border: black solid 1px;
+	width: 99%;
+	min-width: 30%;
+	max-width: 100%;
+	height: 19px;
+	min-height: 19px;
+	max-height: 50px; 
 }
 
 /*Columns formatting start*/
@@ -333,7 +475,15 @@ span.sheet-inputs-readonly{
 	padding-left: 5px;
 }
 
-span.blue{
-    color: blue;
+/*Calculated Field Formatting for Readonly Inputs*/
+input[type="number"].sheet-calcfield {
+	display: inline-block;
+	border: blue solid 1px;
+	height: 28px;
+	margin: 0px;
+	width: 65px;
 }
+
+
+
 
