--- a/PUSH_Main.css
+++ b/PUSH_Main.css
@@ -1,10 +1,8 @@
 /* Set the min-width so that when the window is resized the look will stay consistant */
-
 .charsheet {
 	background-color: #ddd;
 	min-width: 600px;
 	max-width: 1550px;
-	
 }
 
 /* Universal styling applied to all elements of these types */
@@ -27,7 +25,11 @@ input[type="number"] {
   margin: 1px;
 }
 
-
+input[type='date']{position:relative;}
+::-webkit-datetime-edit, ::-webkit-clear-button, ::-webkit-calendar-picker-indicator{position:absolute;}
+::-webkit-clear-button{right:1.54em;}
+::-webkit-inner-spin-button{-webkit-appearance:none; margin:0;}
+::-webkit-calendar-picker-indicator{right:0; padding:.539em .34em;}
 
 input[type='checkbox'] {
 	height: 13px;
@@ -43,17 +45,56 @@ select {
 
 /*Vital Info formatting start*/
 .sheet-vitalinfo-section{
-  display: flex;
-  flex-flow: row wrap;
+  display: grid;
+  grid-template-columns: 13% 20% 13% 20% 13% 15%; 
   align-items: stretch;
+  grid-gap: 4px;
   border: 2px solid black; padding: 3px;
-  background-color: #CBCBCB;  
+  background-color: #CBCBCB;
+  box-shadow: 3px 3px DarkSlateGrey;
+}
+.sheet-vitalinfo-section > input[type="number"],
+.sheet-vitalinfo-section > input[type="text"],
+.sheet-vitalinfo-section > label,
+.sheet-vitalinfo-section > select,  {
+	width: 100%;
+	height: 100%; 
+}
+
+/*Description Section Formatting*/
+.sheet-description-section {
+	display: flex;
+	flex-flow: nowrap;
+	border: 2px solid black; 
+	padding-left: 5px; 
+	margin-top: 3px;
+	box-shadow: 3px 3px DarkSlateGrey;
+}
+
+.sheet-advantage-label {
+	justify-content: space-around;
+	display: inline-grid;
+	grid-template-columns: 30% 10% 30% 10%; 
+	width: 100%;
+}
+
+.sheet-advantage-section {
+	justify-content: space-around;
+	display: inline-grid;
+	grid-template-columns: 30% 10% 30% 10%; 
+}
+
+.sheet-advantage-section > input[type="number"],
+.sheet-advantage-section > input[type="text"],
+.sheet-advantage-section > select,  {
+	width: 100%;
+	height: 100%; 
 }
 
 /*Hitchart formatting start*/
 .sheet-wounds{
   display: inline-grid;
-	grid-template-columns: 30% 15% 10% 40%;
+	grid-template-columns: 30% 14% 10% 10% 35%;
 	grid-template-rows: 32px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px;
 	grid-gap: 1px;
 	width: 100%;
@@ -94,60 +135,72 @@ select {
 
 
 /*Armorchart Formatting*/
-.sheet-armorpieces {
-	display: inline-grid;
-	grid-template-columns: 22% 28% 7% 42%;
-	grid-template-rows: 30px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px;
-	grid-gap: 2px;
-	width: 100%;
-}
-
-
-.sheet-armorpieces > span {
-	width: 100%;
-	height: 22px;
-	padding-top: 5px;
-	justify-content: space-between;
-	text-align: center;
-}
-.sheet-armorpieces > label {
-	width: 100%;
-	height: 18px;
-	font-size: small;
-}
-.sheet-armorpieces > input[type="number"],
-.sheet-armorpieces > input[type='text'] {
-	height: 100%;
-	width: 100%;
-}
-.sheet-pvfield > input[type="text"] {
-	height: 100%;
-	width: 100%;
-	text-align: center;
-}
-
-.sheet-armorpieces > select {
-	width: 100%;
-}
+	.sheet-armorpieces {
+		display: inline-grid;
+		grid-template-columns: 22% 28% 6% 7% 35%;
+		grid-template-rows: 30px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px 22px;
+		grid-gap: 2px;
+		width: 100%;
+	}
+	.sheet-armorpieces > span {
+		width: 100%;
+		height: 22px;
+		padding-top: 5px;
+		justify-content: space-between;
+		text-align: center;
+	}
+	.sheet-armorpieces > label {
+		width: 100%;
+		height: 18px;
+		font-size: small;
+	}
+	.sheet-armorpieces > input[type="number"],
+	.sheet-armorpieces > input[type='text'] {
+		height: 100%;
+		width: 100%;
+	}
+	.sheet-pvfield > input[type="text"] {
+		height: 100%;
+		width: 100%;
+		text-align: center;
+	}
+	.sheet-armorpieces > select {
+		width: 100%;
+	}
 /*Main Div Formatting*/
-.sheet-main{
-	display: flex;
-	flex-wrap: row wrap;
-	max-width: 1500px;
-}
+	.sheet-main{
+		display: flex;
+		flex-wrap: row wrap;
+		max-width: 1500px;
+		box-shadow: 3px 3px DarkSlateGrey;
+	}
 
 /*Stat Pool formatting start*/
 .sheet-pool-section{
   display: grid;
-	  grid-template-columns: 10% 15% 8.5% 15% 15% 38%;
-	  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;	  
+	grid-template-columns: 10% 20% 1% 7% 1% 8% 1% 50%;
+	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;	
+	border: solid 1px SlateGrey;
+	box-shadow: 2px 2px SlateGrey;
+	padding: 2px;
+	margin-top: -10px;
 }
-
 .sheet-pool-section > span {
 	width: 100%;
 	height: 22px;
 	padding-top: 10px;
+	font-size: 16px;
+	font-size: .65vw;
+	text-align: center;
 }
+.sheet-pool-section > input[type="number"], 
+.sheet-pool-section > input[type="text"] {
+		height: 95%;
+		width: 100%;
+		text-align: center;	
+}
+
+
 
 /*Derived Attribues formatting start*/
 .sheet-col {
@@ -186,15 +239,16 @@ select {
 
 
 .sheet-conditiontracker-section {
-	display: flex;
-	flex-flow: nowrap;
-	justify-content: space-between;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+	justify-content: stretch;
+	padding-bottom: 3px;
 }
 
 .sheet-conditiontracker-section >  label {
 	display: inline-block;
-	width: 250px;
-	padding-top: 5px;
+	width: 100%;
+	padding-top: 0px;
 	font-size: small;
 }
 
@@ -216,7 +270,7 @@ div.sheet-quickview_weight {
 /*Ranged Weapon formatting*/
 .sheet-rangedweaponlabel{
 	display: grid;
-		grid-template-columns: 5% 4% 15% 5% 5% 7.5% 5% 10% 5% 5% 5% 5% 21%;
+		grid-template-columns: 5% 3% 15% 5% 5% 5% 7.5% 8% 15% 5% 5% 4% 5% 5% 5%;
 		grid-gap: 1px;
 }
 
@@ -228,13 +282,14 @@ div.sheet-quickview_weight {
 
 .sheet-rangedweapon-section{
 	display: grid;
-		grid-template-columns: 5% 4% 15% 5% 5% 7.5% 5% 10% 5% 5% 5% 5% 21%;
+		grid-template-columns: 5% 3% 15% 5% 5% 5% 7.5% 3.5% 1% 3.5% 10% 1% 4% 5% 5% 4% 5% 5% 5%;
 		grid-template-rows: 28px;
 		grid-gap: 1px;
 		margin-bottom: 10px;
 }
 
 .sheet-rangedweapon-section > input[type="text"],
+.sheet-rangedweapon-section > input[type="number"],
 .sheet-rangedweapon-section > select {
 	display: inline-block;
 	border: black solid 1px;
@@ -258,7 +313,7 @@ div.sheet-quickview_weight {
 /*Melee Weapon Formatting*/
 .sheet-meleeweaponlabel{
 	display: grid;
-		grid-template-columns: 5% 5% 15% 5% 5% 5% 10% 5% 5% 5% 5% 24%;
+		grid-template-columns: 5% 5% 15% 5% 10% 5% 5% 15% 5% 5% 5% 5% 5% 5%;
 		grid-gap: 2px;
 }	
 
@@ -270,7 +325,7 @@ div.sheet-quickview_weight {
 
 .sheet-meleeweapon-section{
 	display: grid;
-		grid-template-columns: 5% 5% 15% 5% 5% 5% 10% 5% 5% 5% 5% 24%;
+		grid-template-columns: 5% 5% 15% 5% 7% 3% 5% 5% 10% 1% 4% 5% 5% 5% 5% 5% 5%;
 		grid-gap: 2px;
 }
 
@@ -282,6 +337,7 @@ div.sheet-quickview_weight {
 	height: 28px;
 	margin: 0px;
 	width: 99%;
+	
 }
 
 .sheet-meleeweapon-section > textarea {
@@ -359,7 +415,7 @@ div.sheet-gear_and_equipment{
 }
 .sheet-gearpagelabel{
 	display: grid;
-		grid-template-columns: 5% 3% 13% 5% 5% 7.5% 5% 10% 5% 5% 5% 5% 23%;
+		grid-template-columns: 5% 3% 13% 5% 7.5% 5% 5% 10% 5% 5% 5% 5% 23%;
 		grid-gap: 1px;
 }
 .sheet-gearpagelabel > span {
@@ -369,7 +425,7 @@ div.sheet-gear_and_equipment{
 }
 .sheet-gearpage-section{
 	display: grid;
-		grid-template-columns:  5% 3% 13% 5% 5% 7.5% 5% 10% 5% 5% 5% 5% 23%;
+		grid-template-columns:  5% 3% 13% 5% 7.5% 5% 5% 10% 5% 5% 5% 5% 23%;
 		grid-template-rows: 28px;
 		grid-gap: 1px;
 		margin-bottom: 10px;
@@ -392,6 +448,47 @@ div.sheet-gear_and_equipment{
 	height: 19px;
 	min-height: 19px;
 	max-height: 50px; 
+}
+/*Money Section Styling*/
+.sheet-money-section {
+	 display: inline-flex; 
+	 flex-flow: nowrap;
+	 padding: 5px;
+}
+.sheet-money-section > input[type="text"],
+.sheet-money-section > input[type="number"]{
+	display: inline-flex;
+	text-align: center;
+}
+.sheet-money-section > span {
+	font-size: medium;
+	padding-right: 3px;
+}
+
+.sheet-money-a,
+.sheet-money-switch:checked ~ .sheet-money-b {
+  display: block;
+}
+
+.sheet-money-b,
+.sheet-money-switch:checked ~ .sheet-money-a {
+  display: none;
+}
+.sheet-money-a > label {
+	font-size: large;
+	padding: 5px;
+	width: 137px;
+}
+.sheet-money-a > span {
+	background-color: lightgreen;
+}
+.sheet-money-b > label {
+	font-size: large;
+	padding: 5px;
+	width: 137px;
+}
+.sheet-money-b > span {
+	background-color: lightgreen;
 }
 
 /*Spells formatting start*/
@@ -438,6 +535,45 @@ input.spellpage{
 	max-height: 50px; 
 }
 
+/*Experience Pages Formatting*/
+.sheet-xppages-section {
+	display: grid;
+	grid-template-columns: 48% 48%;
+	padding: 5px;
+	grid-gap: 5px; 
+}
+
+.sheet-xplabels {
+	display: grid;
+	grid-template-columns: 65% 1% 15% 1% 15%;
+	align-content: space-between;
+}
+.sheet-experience-section {
+	display: grid;
+	grid-template-columns: 65% 1% 15% 1% 15%;
+	grid-template-rows: 24px; 
+	margin-bottom: 5px; 
+}
+
+.sheet-experience-section > input[type="text"],
+.sheet-experience-section > input[type="number"]{
+	width: 100%;
+	height: 100%;
+}
+
+.sheet-experience-section > input[type="date"]{
+	width: 100%;
+	height: 100%;
+	margin-left: 3px;
+	font-size: extra-small;
+}
+.sheet-experience-section > textarea {
+	height: 70%;
+	min-height: 70%; 
+	max-height: 40px; 
+	max-width: 95%; 
+}
+
 /*Columns formatting start*/
 .sheet-columns {
   display: flex;
@@ -459,7 +595,8 @@ input.sheet-toggle-hide:checked ~ div.sheet-body {
 .sheet-combatpages,
 .sheet-gearpages,
 .sheet-notespages,
-.sheet-spellpages{
+.sheet-spellpages,
+.sheet-xppages {
 	display: none;
 }
 
@@ -468,7 +605,8 @@ input.sheet-toggle-hide:checked ~ div.sheet-body {
 .sheet-tabstoggle[value="combatpages"] ~ div.sheet-combatpages,
 .sheet-tabstoggle[value="gearpages"] ~ div.sheet-gearpages,
 .sheet-tabstoggle[value="notespages"] ~ div.sheet-notespages,
-.sheet-tabstoggle[value="spellpages"] ~ div.sheet-spellpages{
+.sheet-tabstoggle[value="spellpages"] ~ div.sheet-spellpages,
+.sheet-tabstoggle[value="xppages"] ~ div.sheet-xppages{
 	display: block;
 }
 
